<resources>
    <string name="app_name">PruebaUsuarios</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="registrar">Registrar</string>
    <string name="direccion">Direccion</string>
    <string name="foto">Foto</string>
    <string name="nombre">Nombre</string>
    <string name="registrar_usuarios">REGISTRAR USUARIOS</string>
</resources>
